Fix alignment mobile input

--- a/app/src/assets/css/index.css
+++ b/app/src/assets/css/index.css
@@ -127,7 +127,7 @@ input {
   color: var(--dark-grey);
   border: 2px solid var(--dark-grey);
   text-align: left;
-  align-items: left;
+  align-items: start;
 }
 
 input.error {
